# mcp-ppt

./: README.md  README_zh.md  bootstrap  pyproject.toml  server-local.py  server.py
